[package]
name = "vault2kube"
version = "0.1.0"
authors = ["Sorah Fukumori <her@sorah.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "2.33.0"
k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_17"] }
kube = "0.33.0"
kube-derive = "0.33.0"
log = "0.4.8"
reqwest = { version =  "0.10.4", features = ["json"] }
serde = "1.0.106"
serde_json = "1.0.52"
tokio = { version = "0.2.20", features = ["macros"] }
handlebars = "3.0.1"
serde_yaml = "0.8.11"
thiserror = "1.0.16"
env_logger = "0.7.1"
