[package]
name = "vault2kube"
version = "0.1.0"
authors = ["Sorah Fukumori <her@sorah.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "2.33.3"
k8s-openapi = { version = "0.9.0", features = ["v1_17"] }
kube = "0.43.0"
kube-derive = "0.43.0"
log = "0.4.8"
reqwest = { version =  "0.10.8", features = ["json"] }
serde = "1.0.117"
serde_json = "1.0.59"
tokio = { version = "0.2.22", features = ["full"] }
handlebars = "3.5.0"
serde_yaml = "0.8.13"
thiserror = "1.0.21"
env_logger = "0.8.1"
